# sparkdantic

./: .gitignore  .pre-commit-config.yaml  404.html  COVERAGE.txt  LICENSE  Makefile  README.md  gen_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  pytest.ini  setup.cfg  test_forward_ref_fix.py
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: build-test.yaml  publish-to-pypi.yaml
contributing/: index.html
docker/: .dockerignore  Dockerfile  docker-compose.yaml
docs/: index.md
docs/SUMMARY/: index.html
docs/sparkdantic/exceptions/: index.html
docs/sparkdantic/generation/: index.html
docs/sparkdantic/model/: index.html
docs/sparkdantic/utils/: index.html
search/: search_index.json
src/sparkdantic/: __init__.py  exceptions.py  generation.py  model.py  utils.py
tests/: conftest.py  test_base_types.py  test_computed_field.py  test_dict_types.py  test_enum_types.py  test_errors.py  test_exclude_field.py  test_field_aliases.py  test_field_descriptions.py  test_field_metadata.py  test_forward_references.py  test_generation.py  test_json_type_to_ddl.py  test_list_types.py  test_model.py  test_nested_models.py  test_optional_pyspark_dependency.py  test_optional_types.py  test_recursive.py  test_spark_field.py  test_type_override.py  test_version.py
