[tool.poetry]
name = "sparkdantic"
version = "0.17.0"
description = "A pydantic -> spark schema library"
authors = ["Mitchell Lisle <m.lisle90@gmail.com>"]
readme = "README.md"
packages = [{include = "sparkdantic", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9,<4.0.0"
pydantic = "^2.1.1"
pyspark = "^3.4.1"
dbldatagen = "^0.3.5"
jmespath = "^1.0.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
pyparsing = "^3.1.1"


[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
twine = "^4.0.2"
flake8 = ">=6,<8"
dlint = "^0.14.0"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
setuptools = ">=68,<70"
flake8-bugbear = "^23.3.23"
pep8-naming = "^0.13.3"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
mkdocs-gen-files = ">=0.4,<0.6"
mkdocs-literate-nav = "^0.6.0"
mkdocstrings = {extras = ["python"], version = ">=0.20,<0.25"}
mkautodoc = "^0.2.0"
pymdown-extensions = "^10.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
hypothesis = "^6.82.0"
faker = ">=19.3.1,<23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


