[tool.poetry]
name = "sparkdantic"
version = "0.26.0"
description = "A pydantic -> spark schema library"
authors = ["Mitchell Lisle <m.lisle90@gmail.com>"]
readme = "README.md"
packages = [{include = "sparkdantic", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9,<4.0.0"
pydantic = "^2.1.1"
dbldatagen = ">=0.3.5,<0.5.0"
pyspark = "^3.3.0"
jmespath = "^1.0.1"
numpy = "^1.25.2"
pandas = "^2.0.3"
pyparsing = "^3.1.1"


[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
twine = ">=4.0.2,<6.0.0"
flake8 = ">=6,<8"
dlint = "^0.14.0"
mypy = "^1.1.1"
pre-commit = "^3.2.1"
setuptools = ">=68,<71"
flake8-bugbear = ">=23.3.23,<25.0.0"
pep8-naming = ">=0.13.3,<0.15.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"
mkdocs-gen-files = ">=0.4,<0.6"
mkdocs-literate-nav = "^0.6.0"
mkdocstrings = {extras = ["python"], version = ">=0.20,<0.26"}
mkautodoc = "^0.2.0"
pymdown-extensions = "^10.0.1"


[tool.poetry.group.test.dependencies]
pytest = ">=7.2.2,<9.0.0"
pytest-dotenv = "^0.5.2"
pytest-cov = ">=4,<6"
hypothesis = "^6.82.0"
faker = ">=19.3.1,<26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
