[project]
name = "sparkdantic"
version = "2.8.3"
description = "A pydantic -> spark schema library"
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
authors = [{ name = "Mitchell Lisle", email = "m.lisle90@gmail.com" }]
dependencies = [
	"pydantic>=2.1.1,<3.0.0",
	"jmespath>=1.0.1,<2.0.0",
	"pyparsing>=3.1.1,<4.0.0",
	"packaging>=24.2,<27.0",
	"jinja2>=3.1.6",
]

[project.optional-dependencies]
pyspark = ["pyspark>=3.3.0,<=4.2.0"]

[dependency-groups]
dev = [
	"bumpversion>=0.6.0,<0.7.0",
	"twine>=4.0.2,<7.0.0",
	"flake8>=6,<8",
	"dlint>=0.14,<0.17",
	"mypy>=1.1.1,<3.0.0",
	"pre-commit>=3.2.1,<5.0.0",
	"setuptools>=68,<83",
	"flake8-bugbear>=23.3.23,<26.0.0",
	"pep8-naming>=0.13.3,<0.16.0",
]
docs = [
	"mkdocs>=1.4.2,<2.0.0",
	"mkdocs-material>=9.1.4,<10.0.0",
	"mkdocs-gen-files>=0.4,<0.7",
	"mkdocs-literate-nav>=0.6.0,<0.7.0",
	"mkdocstrings[python]>=0.20,<1.1",
	"mkautodoc>=0.2.0,<0.3.0",
	"pymdown-extensions>=10.0.1,<12.0.0",
]
test = [
	"pytest>=7.2.2,<10.0.0",
	"pytest-dotenv>=0.5.2,<0.6.0",
	"pytest-cov>=4,<8",
	"hypothesis>=6.82.0,<7.0.0",
	"faker>=26.0.0,<41.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparkdantic"]
